[tool.poetry]
name = "rebalancing-tool"
version = "0.1.0"
description = ""
authors = ["miroslaw-steblik <miroslawsteblik@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
openpyxl = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
